Updated to CentOS 7.5.1804

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -19,8 +19,8 @@ keyboard --vckeymap=fr-oss --xlayouts='fr (oss)'
 # System language
 lang en_US.UTF-8
 # Network information
-network  --bootproto=dhcp --device=link --activate
-network  --hostname=packer.localdomain
+network --bootproto=dhcp --device=link --activate
+network --hostname=packer.localdomain
 unsupported_hardware
 # Root password
 rootpw --plaintext packer
@@ -49,7 +49,7 @@ reboot
 %end
 
 %post --nochroot --logfile=/mnt/sysimage/root/ks-post.log
-# Disable quite boot and splash screen
+# Disable quiet boot and splash screen
 sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/etc/default/grub
 sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/boot/grub2/grub.cfg
 
