Removed Intel Wireless Drivers (iwl*)

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -46,6 +46,7 @@ reboot
 %packages --ignoremissing
 @core
 @Development Tools
+-iwl*firmware
 %end
 
 %post --nochroot --logfile=/mnt/sysimage/root/ks-post.log
