Added @base package group and removed unnecessary firmwares

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -44,9 +44,18 @@ clearpart --all --initlabel
 reboot
 
 %packages --ignoremissing
+# yum group info core
 @core
+# yum group info base
+@base
+# yum group info "Development Tools"
 @Development Tools
+# Don't install unnecessary firmwares and services
+-aic94xx-firmware
+-alsa-firmware
+-ivtv-firmware
 -iwl*firmware
+-postfix
 %end
 
 %post --nochroot --logfile=/mnt/sysimage/root/ks-post.log
