--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -20,7 +20,7 @@ keyboard --vckeymap=fr-oss --xlayouts='fr (oss)'
 lang en_US.UTF-8
 # Network information
 network --bootproto=dhcp --device=link --activate
-network --hostname=packer.localdomain
+network --hostname=centos7.localdomain
 unsupported_hardware
 # Root password
 rootpw --plaintext packer
