- Updated to CentOS 7 Build 2009 - Using netinstall .iso instead of minimal - Switched to Predictable Interface Names - Switched SELinux to enforcing - Switched default keyboard layout to en-us - Added configuration file for UEFI VMs

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -1,12 +1,12 @@
 #version=DEVEL
-# System authorization information
-auth --enableshadow --passalgo=sha512 --kickstart
+# Set the authentication options for the system
+auth --passalgo=sha512 --useshadow
 # Install OS instead of upgrade
 install
 # License agreement
 eula --agreed
-# Use CDROM installation media
-cdrom
+# Use network installation
+url --url="http://mirror.centos.org/centos/7/os/x86_64/"
 # Use text mode install
 text
 # Run the Setup Agent on first boot
@@ -14,8 +14,8 @@ firstboot --disable
 ignoredisk --only-use=sda
 # Firewall configuration
 firewall --disabled
-# Keyboard layouts
-keyboard --vckeymap=fr-oss --xlayouts='fr (oss)'
+# Keyboard layout
+keyboard --vckeymap=us --xlayouts='us'
 # System language
 lang en_US.UTF-8
 # Network information
@@ -25,22 +25,24 @@ unsupported_hardware
 # Root password
 rootpw --plaintext packer
 # SELinux configuration
-selinux --permissive
+selinux --enforcing
 # System services
 services --enabled="NetworkManager,sshd,chronyd"
 # Do not configure the X Window System
 skipx
 # System timezone
-timezone Europe/Paris
-# Add user named packer
+timezone Europe/Paris --isUtc
+# Add a user named packer
 user --groups=packer,wheel --name=packer --password=packer
 # System bootloader configuration
-bootloader --append=" crashkernel=auto" --location=mbr --boot-drive=sda
-autopart --type=lvm
+bootloader --append="crashkernel=auto" --location=mbr
 # Clear the Master Boot Record
 zerombr
-# Partition clearing information
+# Remove partitions
 clearpart --all --initlabel
+# Automatically create partitions using LVM
+autopart --type=lvm
+# Reboot after successful installation
 reboot
 
 %packages --ignoremissing
@@ -65,5 +67,4 @@ sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/boot/grub2/grub.cfg
 
 # sudo
 echo "packer ALL=(ALL) NOPASSWD: ALL" >> /mnt/sysimage/etc/sudoers.d/packer
-sed -i "s/^.*requiretty/#Defaults requiretty/" /mnt/sysimage/etc/sudoers
 %end
